# ActiveDirectoryMCP

./: .gitignore  Dockerfile  HTTP_MCP_GUIDE.md  LICENSE  README.md  TESTING_GUIDE.md  docker-compose-ad.yml  docker-compose.yml  pyproject.toml  quick_ldap_test.py  requirements-dev.in  requirements.in  setup.py  start_http_server.sh  start_server.sh  test_ad_environment.py  test_real_ad.py  test_samba_ad.py
ad-config/: ad-config.json  config.example.json  production-config.example.json
examples/: cursor_mcp_config.json  cursor_openldap_config.json
ldap-init/: 01-structure.ldif
src/active_directory_mcp/: __init__.py  server.py  server_http.py
src/active_directory_mcp/config/: __init__.py  loader.py  models.py
src/active_directory_mcp/core/: __init__.py  ldap_manager.py  logging.py
src/active_directory_mcp/tools/: __init__.py  base.py  computer.py  definitions.py  group.py  organizational_unit.py  security.py  user.py
test_scripts/: README.md  test_http_server.py
tests/: __init__.py  test_config.py  test_integration.py  test_ldap_manager.py  test_user_tools.py
